# myrunstreak.run

./: .env.example  .env.schema  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  QUICKSTART.md  README.md  TESTING.md  docker-compose.localstack.yml  myrunstreak.sh  pyproject.toml  switch-env.sh
.claude/: qe.yml
.claude/agents/: qe-engineer.md
.github/workflows/: backend-deploy.yml  backend-test.yml  frontend-deploy.yml  frontend-test.yml  lambda-deploy.yml  notify-failure.yml  stk-image.yml  supabase-migrations.yml  terraform-apply.yml  terraform-plan.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  admin.py  app.py  auth.py  cache.py  config.py  goals.py  metrics_progress.py  planning.py  pyproject.toml  splits_analysis.py  streaks.py
backend/jobs/: __init__.py  publish_status.py  recompute_plans.py  sync_runs.py
backend/routes/: athletes.py  auth_routes.py  coach.py  invites.py  metrics.py  plan.py  runs.py  stats.py  sync.py  workouts.py
backend/tests/: conftest.py  test_app.py  test_athlete_profile.py  test_auth.py  test_auth_routes.py  test_cache.py  test_coach_foundation.py  test_coach_home.py  test_conditions_penalty.py  test_cors.py  test_exercise_catalog.py  test_goals_module.py  test_goals_repository.py  test_invites.py  test_metrics_progress.py  test_metrics_routes.py  test_publish_status.py  test_route_leaderboard.py  test_run_audio.py  test_run_detail.py  test_run_filters.py  test_run_track.py  test_runs_head.py  test_runs_history.py  test_secrets.py  test_splits_analysis.py  test_stats_goals.py  test_stats_streaks.py  test_streaks.py  test_sync_goals.py  test_sync_splits.py  test_sync_splits_status.py  test_workout_actas.py  test_workout_repository.py
docs/: API_GATEWAY_MIGRATION.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR_PLAN.md  DATA_MODEL.md  DEPLOYMENT_CHECKLIST.md  GEAR_TRACKING.md  GITHUB_ACTIONS.md  GITHUB_OIDC.md  GOALS_TRACKING.md  LAMBDA_SYNC.md  LOCAL_DEV.md  LOCAL_TESTING.md  PLANNING_GUIDE.md  PRODUCTION_DEPLOYMENT.md  SMASHRUN_OAUTH.md  SOCIAL.md  SOURCES_AND_IMPORT.md  SUPABASE_MIGRATION.md  TERRAFORM.md  TESTING.md  UNITS.md  coach-demo.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  vite-env.d.ts
helm/myrunstreak/: Chart.yaml  values.yaml
ops/k3s/: README.md  bootstrap-login-pod.yaml  cronjob.yaml  pvc.yaml
ops/macmini/: README.md  backfill-splits.sh  backfill-status.sh  com.myrunstreak.backfill-splits.plist
scripts/: README.md  README_CLI.md  _db_env.py  backup_database.py  chat.py  check_status.py  migrate_oauth_tokens.py  query_cli.py  query_runs.py  restore_database.py  restore_prod_to_local.sh  seed_local_users.py  setup_smashrun_tokens.py  test_all_local.sh  test_local_sync.py  test_oauth_migration_local.py  test_query_lambda_local.py  test_scheduled_sync.py  test_supabase_local.py  test_sync_lambda_local.py
src/cli/: api.py  display.py  main.py  session.py
src/shared/: config.py  secrets.py  supabase_client.py
stk/: .dockerignore  Dockerfile  README.md  pyproject.toml
stk/src/cli/: __init__.py  api.py  cache.py  config.py  display.py  main.py
stk/src/cli/commands/: athlete.py  auth.py  cache.py  invite.py  runs.py  splits.py  stats.py  sync.py  workout.py
stk/tests/: test_auth_login.py  test_cache.py  test_last_command.py  test_runs_display.py  test_runs_filters.py  test_sync_state.py  test_workout_display.py
supabase/: config.toml
supabase/migrations/: 20251119133437_initial_schema.sql  20251120192810_user_stats_function.sql  20251201164953_user_running_stats.sql  20260228000001_fix_compute_run_metrics_trigger.sql  20260228000002_fix_timezone_in_rpc_functions.sql  20260301000001_increase_distance_precision.sql  20260423124130_create_goals_table.sql  20260602120000_create_metric_tracking.sql  20260603120000_project_runs_to_metric_entries.sql  20260615120000_create_planning.sql  20260615130000_add_goal_qualifiers.sql  20260617000000_add_goal_before_time.sql  20260620000000_create_workouts.sql  20260620010000_add_warmup_cooldown.sql  20260620020000_create_invites.sql  20260621000000_coach_foundation.sql  20260621010000_workouts_athlete_scope.sql  20260621020000_invite_grant_role.sql  20260701000000_invite_athlete_link.sql  20260702000000_athlete_profile.sql  20260704000000_grant_service_role_rest_access.sql  20260704010000_fix_security_advisor.sql  20260704020000_rls_owner_only_no_anon_leak.sql  20260705000000_exercise_catalog.sql  20260705010000_seed_exercise_library.sql  20260705020000_template_item_section.sql  20260711000000_broken_reps.sql  20260712000000_start_hour.sql  20260721000000_run_start_location.sql  20260723000000_run_audio_log.sql
terraform/: README.md
tests/: test_goals_client.py  test_goals_repository.py  test_models.py  test_planning_engine.py  test_planning_service.py  test_publish_status_goals.py  test_run_location_mapper.py  test_smashrun_client.py  test_smashrun_oauth.py  test_split_mappers.py  test_units.py  test_workout_models.py
(+197 files in other folders)
