[project]
name = "myrunstreak"
version = "0.1.0"
description = "Multi-user running analytics API powered by SmashRun, Supabase, and AWS"
readme = "README.md"
authors = [
    { name = "silverbeer", email = "silverbeer.io@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # AWS & Lambda
    "aws-lambda-powertools>=3.2.0",
    "boto3>=1.35.0",

    # Data & Analytics
    # "duckdb>=1.1.0",  # Migrating to Supabase PostgreSQL
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter for Python

    # HTTP & OAuth
    "httpx>=0.27.0",
    "authlib>=1.3.0",

    # Data Validation & Models
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",  # Required by DuckDB for timezone operations
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "moto>=5.0.0",  # AWS mocking
    "ruff>=0.7.0",  # Linting & formatting
    "mypy>=1.11.0",  # Type checking
    "boto3-stubs[essential]>=1.35.0",
]
cli = [
    "rich>=13.7.0",  # Pretty terminal output
]
chat = [
    "pydantic-ai[openai]>=0.0.14",  # AI-powered chat interface
    "httpx>=0.27.0",  # Already in main deps, but needed for chat
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
