[project]
name = "myrunstreak-backend"
version = "0.1.0"
description = "FastAPI backend for myrunstreak.run — replaces the AWS Lambda stack on LKE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "redis>=5.0.0",
    "PyJWT[crypto]>=2.9.0",
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "boto3>=1.35.0",  # Pulled in via src/shared/smashrun. Will go away once we
                      # cut over to k8s-secret-driven config in Phase 2.
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "fakeredis>=2.20.0",
]

[tool.uv]
# Application project — not a published package.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI convention: Depends/Body/Query/Path are call-as-default. Ruff's B008
# is correct in general but wrong here.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
files = ["app", "auth", "cache", "config", "routes", "jobs"]

[[tool.mypy.overrides]]
module = ["supabase.*", "postgrest.*", "fakeredis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v"
